--- a/public/css/style.css
+++ b/public/css/style.css
@@ -449,3 +449,14 @@ footer .brands a {
     font-size: 60px;
     font-weight: 500;
 }
+
+/* Flag */
+
+.flag {
+    width: 30px;
+    margin: 0 10px;
+    border: 0;
+    border-radius: 5px;
+    opacity: 0.4;
+}
+
