--- a/public/css/style.css
+++ b/public/css/style.css
@@ -460,3 +460,182 @@ footer .brands a {
     opacity: 0.4;
 }
 
+/* Navbar */
+.sale {
+    text-align: center;
+    background-color: #629C44;
+    color: #fff;
+    padding: 5px 0 5px 0 !important;
+}
+
+.sale p {
+    margin-bottom: 0 !important;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+.logo a {
+    color: #444444;
+    font-size: 27px;
+}
+
+.logo a:hover {
+    color: #676767
+}
+
+.upper-nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.personal a {
+    color: #444444;
+}
+
+.personal a:hover {
+    color: #676767;
+}
+
+.lower-nav {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+}
+
+.lower-nav a {
+    color: #444444;
+}
+
+.lower-nav a:hover {
+    color: #676767;
+}
+
+.search input {
+    width: 500px;
+    max-width: 100%;
+    border-radius: 50px;
+}
+
+.personal {
+    font-size: 22px;
+}
+
+.navigation-mobile {
+    display: none;
+}
+
+.navigation-pc {
+    display: block;
+}
+
+@media screen and (max-width:995px) {
+
+    .navigation-pc {
+        display: none;
+    }
+
+    .navigation-mobile {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .search-mobile input {
+        width: 300px;
+        max-width: 100%;
+        border-radius: 50px;
+    }
+
+    .line {
+        margin: 0;
+    }
+
+    .mobile-links a {
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .mobile-links a:hover {
+        text-decoration: none;
+        color: #e1e0e0;
+    }
+
+    #mobileShow {
+        background-color: #629C44;
+        color: #fff;
+        border-radius: 20px;
+        padding: 10px 12px;
+        font-size: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    #mobileHide {
+        display: none;
+        background-color: #fff;
+        color: #629C44;
+        border-radius: 20px;
+        padding: 10px 12px;
+        font-size: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        position: relative;
+        z-index: 3;
+    }
+
+    .mobile-menu-container {
+        display: none;
+        background-color: #629C44;
+        width: 100vh;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 2;
+    }
+
+}
+
+
+
+.rating .stars {
+    position: relative;
+    display: block;
+    float: left;
+    height: 20px;
+    width: 105px;
+    background-image: url("../images/stars.png");
+    background-position: 0 0;
+    background-repeat: repeat-x;
+    margin-right: 5px;
+}
+.rating .stars .on {
+    height: 20px;
+    background-image: url("../images/stars.png");
+    background-position: 0 -20px;
+}
+.rating .stars .live {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+.rating .stars .live span {
+    display: block;
+    float: left;
+    cursor: pointer;
+    width: 21px;
+    height: 20px;
+    background-image: url("../images/stars.png");
+    background-repeat: no-repeat;
+    background-position: 0 -20px;
+}
+.rating .stars .live span:hover ~ span {
+    background-position: 0 0px;
+}
+.rating .stars .live:hover {
+    opacity: 1;
+}
