--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-@font-face {
-    font-family: "Montserrat";
-    src: url(./fonts/MontserratAlternates-SemiBold.ttf)
-}
+/*@font-face {*/
+/*    font-family: "Montserrat";*/
+/*    src: url(./fonts/MontserratAlternates-SemiBold.ttf)*/
+/*}*/
 
 :root {
-    --mainFont: "Montserrat";
+    /*--mainFont: "Montserrat";*/
     --color1: #444444;
 }
 
@@ -77,12 +77,10 @@ section {
 }
 
 .book-tile h4 {
-    font-family: var(--mainFont);
     font-size: 20px;
 }
 
 .book-tile p {
-    font-family: var(--mainFont);
     font-size: 16px;
     white-space: nowrap;
     overflow: hidden;
@@ -90,12 +88,57 @@ section {
 }
 
 .book-tile .price {
-    font-family: var(--mainFont);
     font-size: 18px;
     font-weight: bold;
 }
 
 /*books.index*/
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-gap: 1rem;
+    margin: 2em;
+}
+
+.wrapper .product {
+    display: flex;
+    flex-flow: column;
+    border: 1px solid #eee;
+    padding: 1em;
+}
+
+.wrapper .product:hover{
+    border: 1px solid #fff;
+    box-shadow: 0 5px 40px rgba(0,0,0,.3);
+}
+
+.wrapper .product img{
+    width: 100%;
+    overflow: hidden;
+}
+
+.wrapper .product .product-name{
+    margin: 1em 0;
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.wrapper .product .btn-buy {
+    cursor: pointer;
+    margin-top: auto;
+    font-size: 1rem;
+    padding: .8rem 1.5rem;
+    border: 1px solid black;
+    background-color: black;
+    color: #fff;
+}
+
+.wrapper .product .btn-buy:hover{
+    background-color: #fff;
+    color: black;
+}
 
 .library {
     display: flex;
@@ -118,7 +161,6 @@ section {
 }
 
 .library .book p {
-    font-family: var(--mainFont);
     font-size: 16px;
     white-space: nowrap;
     overflow: hidden;
@@ -126,14 +168,25 @@ section {
 }
 
 .library .book .price {
-    font-family: var(--mainFont);
     font-size: 18px;
     font-weight: bold;
 }
 
 .library .book h4 {
-    font-family: var(--mainFont);
     font-size: 20px;
+}
+
+.library a{
+    color:black;
+    text-decoration: none;
+}
+
+.library a:hover {
+    color: black;
+    text-decoration: none;
+    -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
 }
 
 .slick-arrow::before {
@@ -167,7 +220,6 @@ section {
 .genres-slider h4 {
     position: relative;
     text-align: center;
-    font-family: var(--mainFont);
     font-size: 20px;
     bottom: 100px;
     text-transform: uppercase;
@@ -204,7 +256,6 @@ section {
 }
 
 .tiles .genre-book-tile p {
-    font-family: var(--mainFont);
     font-size: 16px;
     white-space: nowrap;
     overflow: hidden;
@@ -212,7 +263,6 @@ section {
 }
 
 .tiles .genre-book-tile h4 {
-    font-family: var(--mainFont);
     font-size: 20px;
 }
 
@@ -638,4 +688,44 @@ a {
 }
 .rating .stars .live:hover {
     opacity: 1;
+}
+
+/* checkout */
+
+.checkout-header {
+    padding: 25px 50px;
+}
+
+.logo a {
+    color: #444444;
+    font-size: 27px;
+    text-decoration: none;
+}
+
+.logo a:hover {
+    color: #676767
+}
+
+.back_support {
+    margin-top: 30px;
+}
+
+.back_support a{
+    color: #444444;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.back_support a:hover{
+    color: #676767;
+}
+
+.checkout-title {
+    margin-top: 50px;
+    color: #444444;
+}
+
+.checkout-subtitle p{
+    color: #676767;
+    font-size: 14px;
 }
